--- a/Кинопоиск/star.html
+++ b/Кинопоиск/star.html
@@ -4,48 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
     <header class="nav_bar">
         <button class="logo_burger">
-            <img class="burger" src="/img/burger.svg" alt="">
-            <img class="logo" src="/img/logo.svg" alt="">
+            <img class="burger" src="img/burger.svg" alt="">
+            <img class="logo" src="img/logo.svg" alt="">
             <div class="shutter">
-                <a class="shutter_text_img" href="/">
-                    <img class="img_shutter" src="/img/glavnaya.svg" alt="">
+                <a class="shutter_text_img" href="index.html">
+                    <img class="img_shutter" src="img/glavnaya.svg" alt="">
                     <p class="shutter-text">Главная</p>
                 </a>
-                <a class="shutter_text_img" href="/">
-                    <img class="img_shutter" src="/img/online_cinema.svg" alt="">
+                <a class="shutter_text_img" href="index.html">
+                    <img class="img_shutter" src="img/online_cinema.svg" alt="">
                     <p class="shutter-text">Онлайн кинотеатр</p>
                 </a>
-                <a class="shutter_text_img" href="/">
-                    <img class="img_shutter" src="/img/films.svg" alt="">
+                <a class="shutter_text_img" href="index.html">
+                    <img class="img_shutter" src="img/films.svg" alt="">
                     <p class="shutter-text">Фильмы</p>
                 </a>
                 <a class="shutter_text_img" href="/">
-                    <img class="img_shutter" src="/img/serials.svg" alt="">
+                    <img class="img_shutter" src="img/serials.svg" alt="">
                     <p class="shutter-text">Сериалы</p>
                 </a>
                 <a class="shutter_text_img" href="/">
-                    <img class="img_shutter" src="/img/tv.svg" alt="">
+                    <img class="img_shutter" src="img/tv.svg" alt="">
                     <p class="shutter-text">Телеканалы</p>
                 </a>
                 <a class="shutter_text_img" href="/">
-                    <img class="img_shutter" src="/img/sport.svg" alt="">
+                    <img class="img_shutter" src="img/sport.svg" alt="">
                     <p class="shutter-text">Спорт</p>
                 </a>
                 <a class="shutter_text_img" href="/">
-                    <img class="img_shutter" src="/img/games.svg" alt="">
+                    <img class="img_shutter" src="img/games.svg" alt="">
                     <p class="shutter-text">Игры</p>
                 </a>
                 <a class="shutter_text_img" href="/">
-                    <img class="img_shutter" src="/img/bilets.svg" alt="">
+                    <img class="img_shutter" src="img/bilets.svg" alt="">
                     <p class="shutter-text">Билеты в кино</p>
                 </a>
                 <a class="shutter_text_img" href="/">
-                    <img class="img_shutter" src="/img/media.svg" alt="">
+                    <img class="img_shutter" src="img/media.svg" alt="">
                     <p class="shutter-text">Медиа</p>
                 </a>
             </div>
@@ -53,31 +54,31 @@
 
 
         <a class="online-cinema" href="/">
-            <img src="/img/orig.svg" alt="">
+            <img src="img/orig.svg" alt="">
             <p>Онлайн-кинотеатр</p>
         </a>
         <a class="view_mult" href="/">
-            <img src="/img/med.svg" alt="">
+            <img src="img/med.svg" alt="">
             <p>Смотреть мультики</p>
         </a>
 
 
         <div class="poisk_item">
             <button class="poisk-img1">
-                <img class="poisk_img" src="/img/settings.svg" alt="">
+                <img class="poisk_img" src="img/settings.svg" alt="">
             </button>
             <button class="poisk-img2">
-                <img class="poisk_img" src="/img/poisk.svg" alt="">
+                <img class="poisk_img" src="img/poisk.svg" alt="">
             </button>
             <input class="poisk" type="text" placeholder="Фильмы, сериалы, персоны ">
         </div>
-        <a href=""><img class="save_button" style="width: 28px;" src="/img/save_button.svg" alt=""></a>
+        <a href=""><img class="save_button" style="width: 28px;" src="img/save_button.svg" alt=""></a>
 
         <a class="free_cinema" href="/">
             <p>Смотреть кино <br>бесплатно</p>
         </a>
         <button class="login">
-            <img class="burger" src="/img/user.svg" style="min-width: 30px;" alt="">
+            <img class="burger" src="img/user.svg" style="min-width: 30px;" alt="">
             <div class="shutter_login">
                 <ul class="login_text">
                     <li>Почта</li>
@@ -106,13 +107,13 @@
             <a class="first_element_main" href=""><p class="p_first_e">Все списки ></p></a>
             <div class="content">
                 <ul class="ul_content">
-                    <li><a class="nav_content" href="/index.html">500 лучших фильмов</a></li>
+                    <li><a class="nav_content" href="index.html">500 лучших фильмов</a></li>
                 </ul>
                 <ul class="ul_content">
-                    <li><a class="nav_content" href="/star.html">Избранное</a></li>
+                    <li><a class="nav_content" href="star.html">Избранное</a></li>
                 </ul>
                 <ul class="ul_content">
-                    <li><a class="nav_content" href="/view.html">Просмотренные</a></li>
+                    <li><a class="nav_content" href="view.html">Просмотренные</a></li>
                 </ul>
                 <ul class="ul_content">
                     <li><a class="nav_content" href="/">Онлайн-кинотеатр</a></li>
@@ -133,10 +134,10 @@
                 <button class="side_button">Скрыть просмотренные</button>
                 <button class="side_button">Загрузить на смартфон</button>
                 <div class="shtorka">
-                    <button class="drop_side" id="drop_side"><p class="p_side"><img class="img_drop" src="/img/arrow.svg" alt="">Страны</p></button>
+                    <button class="drop_side" id="drop_side"><p class="p_side"><img class="img_drop" src="img/arrow.svg" alt="">Страны</p></button>
                     <button class="drop_filter none" id="drop_filter">
                         <p>Все страны</p>
-                        <img class="down_arrow_filter" src="/img/down_arrow.svg" alt="">
+                        <img class="down_arrow_filter" src="img/down_arrow.svg" alt="">
                     </button>
                     <ul class="nothing none">
                         <button class="li_nothing">Все страны <p style="color: red">✓</p></button>
@@ -147,10 +148,10 @@
                     </ul>
                 </div>
                 <div class="shtorka">
-                    <button class="drop_side" id="drop_side"><p class="p_side"><img class="img_drop" src="/img/arrow.svg" alt="">Жанры</p></button>
+                    <button class="drop_side" id="drop_side"><p class="p_side"><img class="img_drop" src="img/arrow.svg" alt="">Жанры</p></button>
                     <button class="drop_filter none" id="drop_filter">
                         <p>Все страны</p>
-                        <img class="down_arrow_filter" src="/img/down_arrow.svg" alt="">
+                        <img class="down_arrow_filter" src="img/down_arrow.svg" alt="">
                     </button>
                     <ul class="nothing none">
                         <button class="li_nothing">Все жанры <p style="color: red">✓</p></button>
@@ -161,10 +162,10 @@
                     </ul>
                 </div>
                 <div class="shtorka">
-                    <button class="drop_side" id="drop_side"><p class="p_side"><img class="img_drop" src="/img/arrow.svg" alt="">Годы</p></button>
+                    <button class="drop_side" id="drop_side"><p class="p_side"><img class="img_drop" src="img/arrow.svg" alt="">Годы</p></button>
                     <button class="drop_filter none" id="drop_filter">
                         <p>Все годы</p>
-                        <img class="down_arrow_filter" src="/img/down_arrow.svg" alt="">
+                        <img class="down_arrow_filter" src="img/down_arrow.svg" alt="">
                     </button>
                     <ul class="nothing none">
                         <button class="li_nothing">Все годы <p style="color: red">✓</p></button>
@@ -182,8 +183,8 @@
                         <p>Список представляет собой расширенную версию рейтинга лучших фильмов по версии пользователей Кинопоиска.</p>
                     </div>
                     <div class="top_500">
-                        <img class="img_500" src="/img/TOP500.png" alt="">
-                        <button class="text_500" id="triggerArea">По порядку<img class="down_arrow" src="/img/down_arrow.svg" alt=""></button>
+                        <img class="img_500" src="img/TOP500.png" alt="">
+                        <button class="text_500" id="triggerArea">По порядку<img class="down_arrow" src="img/down_arrow.svg" alt=""></button>
                         <div class="dropdown" id="drop">
                             <ul class="none" id="none">
                                 <li><button class="drop_button">По порядку</button></li>
@@ -210,7 +211,7 @@
 
     <footer style="margin-top: 200px;">
         <div class="footer">
-            <img src="/img/footer.jpg" alt="" class="img_footer">
+            <img src="img/footer.jpg" alt="" class="img_footer">
             <div class="footer_text">
                 <p>Вакансии</p>
                 <p>Реклама</p>
