--- a/Кинопоиск - задание/index.html
+++ b/Кинопоиск - задание/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
+    <style>
+        @font-face {
+            font-family: 'kinopoisk';
+            src: url('fonts/graphiklcweb_medium.woff2') format('woff2'),
+                 url('fonts/graphiklcweb_medium.woff') format('woff');
+        }
+
+        body {
+            font-family: 'kinopoisk', sans-serif;
+        }
+    </style>
     <div class="alerts" id="alertos">
         <div style="margin-bottom: 30px; margin-top: 20px;">
             <strong style="font-size: 30px;">Добавление фильма</strong>
