--- a/TableGrafic/index.html
+++ b/TableGrafic/index.html
@@ -6,21 +6,19 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     </head>
 <body>
-  <button class="buttonSwitch" onclick="buttonSwitch()">Переключиться</button>
+  <button class="mt-4 mb-4 border border-2 border-dark rounded d-flex justify-content-center w-auto mx-auto p-2" onclick="buttonSwitch()">Переключиться</button>
   <div class="firstPart">
-    <div class="tittle_name">
-      <p class="name">Доходы</p>
-      <p class="name">Расходы</p>
+    <div class="gridColumns d-grid mt-2 mb-2">
+      <p class="d-flex justify-content-center fw-bold fs-1">Доходы</p>
+      <p class="d-flex justify-content-center fw-bold fs-1">Расходы</p>
   </div>
-  <div class="buttons">
-      <div class="d-flex gap-3 m-3 forButtons">
+  <div class="d-grid gridColumns mt-2 mb-2">
+      <div class="d-flex gap-3 m-3 justify-content-center">
           <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addIncomeModal" onclick="addInfoFirst()">Добавить</button>
-          <!-- <button id="redButtonFirst" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editIncomeModal" onclick="redInfoFirst()">Редактировать</button> -->
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addIncomeModal" onclick="redInfoFirst()" id="redIncome">Редактировать</button>
           <button class="btn btn-danger"  onclick="deleteIncome()">Удалить</button>
       </div>
-      <div class="d-flex gap-3 m-3 forButtons">
-          <!-- <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addExpensesModal" onclick="addInfoSecond()">Добавить</button>-->
+      <div class="d-flex gap-3 m-3 justify-content-center">
           <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addIncomeModal" onclick="addInfoSecond()">Добавить</button>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addIncomeModal" onclick="redInfoSecond()" id="redExpenses">Редактировать</button>
           <button class="btn btn-danger" onclick="deleteExpenses()">Удалить</button>
@@ -29,23 +27,23 @@
   <div class="modal fade" id="addIncomeModal" tabindex="-1" aria-labelledby="addIncomeModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
       <div class="modal-dialog">
           <div class="modal-content">
-            <div class="modal-header">
+            <div class="mb-2 d-flex justify-content-between mt-3 ms-3 me-3">
               <h1 class="modal-title fs-4" id="addIncomeModalLabel">Добавление дохода</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
             </div>
             <div class="modal-body">
               <form id="addIncomeForm">
-                <fieldset class="form-fieldset-custom">
-                  <legend>Категория</legend>
-                  <input type="text" class="form-control" id="addIncomeCategory" required>
+                <fieldset class="position-relative border border-2 border-dark rounded p-4 pb-3 pt-4 mb-4 bg-white">
+                  <legend class="formLegend bg-white w-auto position-absolute">Категория</legend>
+                  <input type="text" class="border-0 bg-transparent w-100 fs-7" id="addIncomeCategory" required>
                 </fieldset>
-                <fieldset class="form-fieldset-custom">
-                  <legend>Сумма</legend>
-                  <input type="number" class="form-control" id="addIncomeSum" required>
+                <fieldset class="position-relative border border-2 border-dark rounded p-4 pb-3 pt-4 mb-4 bg-white">
+                  <legend class="formLegend bg-white w-auto position-absolute">Сумма</legend>
+                  <input type="number" class="border-0 bg-transparent w-100 fs-7" id="addIncomeSum" required>
                 </fieldset>
-                <fieldset class="form-fieldset-custom">
-                  <legend>Дата</legend>
-                  <input type="date" class="form-control" id="addIncomeDate" required>
+                <fieldset class="position-relative border border-2 border-dark rounded p-4 pb-3 pt-4 mb-4 bg-white">
+                  <legend class="formLegend bg-white w-auto position-absolute">Дата</legend>
+                  <input type="date" class="border-0 bg-transparent w-100 fs-7" id="addIncomeDate" required>
                 </fieldset>
               </form>
             </div>
@@ -56,26 +54,26 @@
           </div>
       </div>
   </div>
-  <div class="settings_myGrid">
+  <div class="gridColumns w-90 mx-auto d-grid">
       <div class="myGrid" id="myGridfirst"></div>
       <div class="myGrid" id="myGridsecond"></div>
   </div>
   </div>
   <div class="secondPart">
-    <h1 class="graficName">Графики</h1>
-    <div class="date">
+    <h1 class="d-flex justify-content-center mt-5 mb-2">Графики</h1>
+    <div class="d-flex justify-content-around mb-3 mt-3">
       <div>
-        <input class="dateElements" type="date" onchange="dateRange1()">
-        <input class="dateElements" type="date" onchange="dateRange2()">
+        <input class="dateElements mx-2 border border-2 border-dark p-2 rounded" type="date" onchange="dateRange1()">
+        <input class="dateElements mx-2 border border-2 border-dark p-2 rounded" type="date" onchange="dateRange2()">
       </div>
       <div>
-        <input class="dateElements" type="date" onchange="dateRange3()">
-        <input class="dateElements" type="date" onchange="dateRange4()">
+        <input class="dateElements mx-2 border border-2 border-dark p-2 rounded" type="date" onchange="dateRange3()">
+        <input class="dateElements mx-2 border border-2 border-dark p-2 rounded" type="date" onchange="dateRange4()">
       </div>
     </div>
-    <div class="bothGrafics">
-      <div id="mainFirst" class="grafic"></div> 
-      <div id="mainSecond" class="grafic"></div> 
+    <div class="d-flex justify-content-around mb-5">
+      <div id="mainFirst" class="grafic d-flex justify-content-center"></div> 
+      <div id="mainSecond" class="grafic d-flex justify-content-center"></div> 
     </div>
   </div>
     </body>
