--- a/TableGrafic/index.html
+++ b/TableGrafic/index.html
@@ -21,7 +21,7 @@
       <div class="d-flex gap-3 m-3 justify-content-center">
           <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addIncomeModal" onclick="expenseResetCreateForm()">Добавить</button>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addIncomeModal" onclick="expenseResetEditForm()" id="editExpenseButton">Редактировать</button>
-          <button class="btn btn-danger" onclick="deleteExpenses()">Удалить</button>
+          <button class="btn btn-danger" onclick="expenseDeleteButton()">Удалить</button>
       </div>
   </div>
   <div class="modal fade" id="addIncomeModal" tabindex="-1" aria-labelledby="addIncomeModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
